Reverted changes made in "Fixed vertically stretched site logo" and applied a different fix to stretched fileselect item image

--- a/rsc/css/basic_styles.css
+++ b/rsc/css/basic_styles.css
@@ -73,6 +73,7 @@ code {
 img {
   border: none;
   max-width: 100%;
+  height: auto;
 }
 .top {
   vertical-align: top;
