--- a/rsc/less/inc/image_styles.inc.less
+++ b/rsc/less/inc/image_styles.inc.less
@@ -7,9 +7,7 @@ img {
 	// The following will achieve "fake responsiveness" for images inserted with raw <img src=""> tags.
 	// It will also constrain images added with [inline:]
 	max-width: 100%;
-
-	// The following was disabled as it stretches some of the images in the backoffice such as the Site logo under the Site Settings
-	//height: auto;
+	height: auto;
 }
 
 
